--- a/apk/res/values-es/strings.xml
+++ b/apk/res/values-es/strings.xml
@@ -428,7 +428,7 @@
     <string name="no_apps_denied" msgid="743327680286446017">"No hay aplicaciones denegadas"</string>
     <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"¿Quitar acceso de todas las aplicaciones?"</string>
     <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"Ninguna de tus aplicaciones podrá acceder ni añadir nuevos datos a Salud conectada. No se eliminarán los datos ya almacenados.\n\nEsta acción no afecta a otros permisos que pueda tener esta aplicación, como los de ubicación, cámara o micrófono."</string>
-    <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Quitar todos"</string>
+    <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Quitar"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Gestionar aplicación"</string>
     <string name="see_app_data" msgid="3951030076195119476">"Ver datos de la aplicación"</string>
     <string name="remove_access_for_this_app" msgid="7701101420310711833">"Quitar acceso de esta aplicación"</string>
@@ -543,10 +543,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Ir a Play Store"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Empezar a usar Salud conectada"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Salud conectada almacena tus datos de salud y actividad física, y te ofrece una forma sencilla de sincronizar las diferentes aplicaciones de tu dispositivo"</string>
-    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Salud conectada almacena y sincroniza tus datos de salud y actividad física de diferentes aplicaciones.\n\n"<b>"Datos de actividad física y bienestar,"</b>" como sesiones de ejercicio, pasos, nutrición y sueño \n\n"<b>"Registros de salud,"</b>" como vacunas y resultados de analíticas"</string>
-    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Con Salud conectada, puedes hacer lo siguiente:"</string>
-    <string name="share_data_text" msgid="6898398345784931678"><b>"Comparte datos con tus aplicaciones"</b>\n"Elige los datos que cada aplicación puede leer o escribir en Salud conectada"</string>
-    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Gestiona tus ajustes y tu privacidad"</b>\n"Cambia los permisos de las aplicaciones y gestiona tus datos en cualquier momento"</string>
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Salud conectada almacena y sincroniza de diferentes aplicaciones tus datos de salud y actividad física:\n\n"<b>"Datos de actividad física y bienestar,"</b>" como sesiones de ejercicio, pasos, nutrición y sueño \n\n"<b>"Registros de salud,"</b>" como vacunas y resultados de analíticas"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Con Salud conectada, puedes:"</string>
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Compartir datos con tus aplicaciones"</b>\n"Elige los datos que cada aplicación puede leer o escribir en Salud conectada"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Gestionar tus ajustes y tu privacidad"</b>\n"Cambia los permisos de las aplicaciones y gestiona tus datos en cualquier momento"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Atrás"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Empezar"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Eliminar datos"</string>
@@ -1129,7 +1129,7 @@
     <string name="lock_screen_banner_content" msgid="3392527073622152481">"Para añadir una capa de seguridad a tus datos de salud, configura un PIN, patrón o contraseña en este dispositivo"</string>
     <string name="lock_screen_banner_button" msgid="2537090011380728122">"Establecer bloqueo de pantalla"</string>
     <string name="select_all" msgid="837499881590001166">"Seleccionar todo"</string>
-    <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Las aplicaciones conectadas ya no podrán leer estos datos de Salud conectada"</string>
+    <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Las aplicaciones conectadas dejarán de leer estos datos de Salud conectada"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Marcada"</string>
     <string name="a11y_unchecked" msgid="6258943223981886207">"Sin marcar"</string>
     <string name="a11y_map_description" msgid="4992907698581164434">"Mapa de ruta de ejercicio disponible"</string>
